--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -4,7 +4,7 @@
   "singleQuote": true,
   "trailingComma": "all",
   "bracketSpacing": true,
-  "semi": false,
+  "semi": true,
   "useTabs": false,
   "bracketSameLine": false,
   "jsxSingleQuote": true,
