--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-DB_URL="mongodb://localhost:27017/crew"
-SECRET_KEY="qwertyuiop"
-REFRESH_SECRET_KEY="asdfghjkl"
+DB_URL=mongodb://localhost:27017/crew
+SECRET_KEY=qwertyuiop
+REFRESH_SECRET_KEY=asdfghjkl
